--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>GitHub GraphicsApp Apache Maven Packages</name>
+            <name>GitHub Packages</name>
             <url>https://github.com/GraphicsApp/GraphicsApp</url>
         </repository>
     </distributionManagement>
