Fix build settings for package

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-projectGroup=de.ur.mi
-projectName=GraphicsApp
+projectGroup=de.ur.mi.oop
+projectName=graphicsapp
 projectVersion=1.4.11
 projectVersionCompatibility=16
 projectTargetCompatibility=16
