--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://github.com/GraphicsApp/GraphicsApp")
+            url = uri("https://maven.pkg.github.com/GraphicsApp/GraphicsApp")
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
