Allow JitPack build

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectGroup=de.ur.mi.oop
+projectGroup=com.github.GraphicsApp
 projectName=graphicsapp
 projectVersion=1.4.11
 projectVersionCompatibility=16
